--- a/homestyle.css
+++ b/homestyle.css
@@ -53,6 +53,7 @@ button {
 
 /* Game Button */
 #game {
+    position: absolute;
     top: 70%;
     left: 18%;
     width: 300px;
@@ -67,22 +68,30 @@ button {
     cursor: pointer;
     transition: background-position 6s ease-in-out, width 0.3s ease, height 0.3s ease;
     border-radius: 15px;
-    box-shadow: 3px 3px 8px rgba(0, 0, 0, 0.3);
-    border: 2px solid #4e4e4e;
+    box-shadow: #1a140d 5px 5px 0 0;
+    border: 2px solid #1f1a10;
     text-shadow: 
         1px 1px 0 #000,
         -1px -1px 0 #000,
         1px -1px 0 #000,
         -1px 1px 0 #000;
+    mix-blend-mode: difference; /* This will blend the button with the background */
 }
 
 #game:hover {
     background-position: 100% 0;
-    box-shadow: 3px 3px 12px rgba(0, 0, 0, 0.5);
-    border-color: #181818;
     width: 330px;
     height: 115px;
+    mix-blend-mode: normal; /* Change blend mode on hover to reveal hover effect */
 }
+
+#game:active {
+    box-shadow: #16120b 2px 2px 0 0;
+    transform: translate(5px, 5px);
+}
+
+
+
 
 #art {
     top: 60%;
@@ -94,18 +103,18 @@ button {
     background-size: 100%;
     background-position: center;
     border: none;
-    font-size: 25px;
-    font-weight: 600;
+    color: rgb(253, 253, 253);
+    font-size: 19px;
+    font-weight: 300;
     cursor: pointer;
     transition: background-size 6s ease-in-out, box-shadow 1s ease, border-color 1s ease, height 1s ease, width 1s ease;
-    border-radius: 15px;
     box-shadow: 3px 3px 8px rgba(0, 0, 0, 0.3);
     border: 2px solid #4e4e4e;
-    text-shadow: 
-        1px 1px 0 #000,
-        -1px -1px 0 #000,
-        1px -1px 0 #000,
-        -1px 1px 0 #000;
+    padding: 0 18px;
+    line-height: 50px;
+    text-align: center;
+    border-radius: 30px;
+
 }
 
 #art:hover {
@@ -115,6 +124,11 @@ button {
     height: 210px;
     width: 270px;
 }
+
+#art:active {
+    box-shadow: #422800 2px 2px 0 0;
+    transform: translate(5px, 5px);
+  }
 
 
 #certs {
@@ -137,6 +151,31 @@ button {
         -1px 1px 0 #000;
 }
 #certs:hover {
+    box-shadow: 3px 3px 12px rgba(0, 0, 0, 0.5);
+    border-color: #181818;
+    width: 110px;
+    height: 110px;
+}
+#dashboard {
+    top: 85%;
+    left: 10%;
+    width: 100px;
+    height: 100px;
+    background-image: url('dashboard.png');
+    background-size: 100%;
+    border: none;
+    cursor: pointer;
+    transition: width 0.3s ease, height 0.3s ease;
+    border-radius: 15px;
+    box-shadow: 3px 3px 8px rgba(0, 0, 0, 0.3);
+    border: 2px solid #4e4e4e;
+    text-shadow: 
+        1px 1px 0 #000,
+        -1px -1px 0 #000,
+        1px -1px 0 #000,
+        -1px 1px 0 #000;
+}
+#dashboard:hover {
     box-shadow: 3px 3px 12px rgba(0, 0, 0, 0.5);
     border-color: #181818;
     width: 110px;
@@ -167,13 +206,13 @@ button {
 
 .eye.left {
     left: 80px;
-    background-image: url('eye1.PNG');
+    background-image: url('eye1.png');
     z-index: 2;
 }
 
 .eye.right {
     right: 94px;
-    background-image: url('eye2.PNG');
+    background-image: url('eye2.png');
     z-index: 2;
 }
 
@@ -195,5 +234,6 @@ button {
     right: 38%;
     background-image: url('paw1.png');
 }
+
 
 
