--- a/homestyle.css
+++ b/homestyle.css
@@ -161,7 +161,7 @@ button {
     left: 10%;
     width: 100px;
     height: 100px;
-    background-image: url('dashboard.png');
+    background-image: url('dashboard.PNG');
     background-size: 100%;
     border: none;
     cursor: pointer;
