--- a/homestyle.css
+++ b/homestyle.css
@@ -212,7 +212,7 @@ button {
 
 .eye.right {
     right: 94px;
-    background-image: url('eye2.PNG');
+    background-image: url('eye2.png');
     z-index: 2;
 }
 
