--- a/homestyle.css
+++ b/homestyle.css
@@ -186,35 +186,44 @@ button {
 .smiley {
     background-image: url('cat_body.png');
     position: absolute;
-    bottom: -8%;
+    bottom: -10%;
     left: 50%;
     transform: translateX(-50%);
     width: 300px;
     height: 300px;
     background-size: contain;
     background-repeat: no-repeat;
+    z-index: 2;
+}
+
+.eyes {
+    position: absolute;
+    bottom: -8%;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 500px;
+    height: 500px;
+    z-index: 1; 
 }
 
 .eye {
     position: absolute;
-    width: 50px;
-    height: 40px;
+    width: 49px;
+    height: 49px;
     background-size: cover;
     background-position: center;
-    border-radius: 90%;
-    top: 183px;
+    border-radius: 20%;
+    top: 345px;
 }
 
 .eye.left {
-    left: 80px;
+    left: 198px;
     background-image: url('eye1.png');
-    z-index: 2;
 }
 
 .eye.right {
-    right: 94px;
+    right: 184px;
     background-image: url('eye2.png');
-    z-index: 2;
 }
 
 .paw1, .paw2 {
